--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
+    "sass": "^1.83.4",
     "typescript": "^4.9.5",
+    "uuid": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
